[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/anima-preview.png" type="Texture" id=1]
[ext_resource path="res://demos/AnimationsPreview.gd" type="Script" id=2]
[ext_resource path="res://addons/anima/fonts/Lato-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://demos/components/ShowAllDemos.tscn" type="PackedScene" id=4]

[sub_resource type="ProceduralSky" id=1]
ground_bottom_color = Color( 0.470588, 0.470588, 0.470588, 1 )
ground_horizon_color = Color( 0.470588, 0.470588, 0.470588, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_energy = 1.52

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[sub_resource type="DynamicFont" id=6]
size = 100
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.101961, 0.12549, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[sub_resource type="ButtonGroup" id=9]

[node name="AnimationsPreview" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1000, 600 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshContainer" type="Spatial" parent="."]
visible = false

[node name="Camera" type="Camera" parent="MeshContainer"]
transform = Transform( 1, 0, 0, 0, 0.979389, 0.201984, 0, -0.201984, 0.979389, 0, 2.19661, 5.75889 )
environment = SubResource( 2 )
current = true
fov = 63.1

[node name="Spatial" type="Spatial" parent="MeshContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.10789, 0 )

[node name="MeshInstance" type="MeshInstance" parent="MeshContainer/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.454, -5, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_right = 704.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="2DContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
margin_right = 700.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlLabel" type="Label" parent="HBoxContainer/Panel/2DContainer"]
margin_right = 700.0
margin_bottom = 14.0
text = "Control node:"

[node name="ControlContainer" type="CenterContainer" parent="HBoxContainer/Panel/2DContainer"]
margin_top = 18.0
margin_right = 700.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlTest" type="Label" parent="HBoxContainer/Panel/2DContainer/ControlContainer"]
margin_left = 204.0
margin_top = 77.0
margin_right = 495.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 6 )
text = "Anima"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Panel/2DContainer"]
margin_top = 298.0
margin_right = 700.0
margin_bottom = 302.0

[node name="SpriteLabel" type="Label" parent="HBoxContainer/Panel/2DContainer"]
margin_top = 306.0
margin_right = 700.0
margin_bottom = 320.0
text = "Sprite node:"

[node name="SpriteContainer" type="CenterContainer" parent="HBoxContainer/Panel/2DContainer"]
margin_top = 324.0
margin_right = 700.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="HBoxContainer/Panel/2DContainer/SpriteContainer"]
margin_left = 350.0
margin_top = 138.0
margin_right = 350.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpriteTest" type="Sprite" parent="HBoxContainer/Panel/2DContainer/SpriteContainer/Control2"]
texture = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
margin_left = 704.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 320, 0 )
custom_styles/bg = SubResource( 7 )

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/ScrollContainer"]
margin_right = 320.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 8 )

[node name="ListContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 308.0
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer"]
margin_right = 296.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 132.0
margin_bottom = 19.0
text = "Duration in seconds:"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 24.0

[node name="DurationEdit" type="LineEdit" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 24.0
hint_tooltip = "Speed value in seconds"
size_flags_horizontal = 3
text = "0.5"
align = 2
placeholder_text = "Speed in ms"
caret_blink = true
caret_blink_speed = 0.5

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer"]
margin_top = 32.0
margin_right = 296.0
margin_bottom = 36.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer"]
margin_top = 44.0
margin_right = 296.0
margin_bottom = 68.0
alignment = 1

[node name="2D" type="CheckBox" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer2"]
margin_left = 100.0
margin_right = 146.0
margin_bottom = 24.0
pressed = true
group = SubResource( 9 )
text = "2D"

[node name="3D" type="CheckBox" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer2"]
margin_left = 150.0
margin_right = 196.0
margin_bottom = 24.0
group = SubResource( 9 )
text = "3D"

[node name="ControlOrSprite" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer"]
margin_top = 76.0
margin_right = 296.0
margin_bottom = 100.0

[node name="ControlCheckbox" type="CheckBox" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/ControlOrSprite"]
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3
pressed = true
text = "Control"

[node name="SpriteCheckbox" type="CheckBox" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/ControlOrSprite"]
margin_left = 150.0
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 3
pressed = true
text = "Sprite"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ShowAllDemos" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = 0.3
anchor_top = -0.00114288
anchor_right = 0.322461
anchor_bottom = 0.00552378

[connection signal="pressed" from="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer2/2D" to="." method="_on_2D_pressed"]
[connection signal="pressed" from="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer2/3D" to="." method="_on_3D_pressed"]
[connection signal="pressed" from="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/ControlOrSprite/ControlCheckbox" to="." method="_on_ControlCheckbox_pressed"]
[connection signal="pressed" from="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/ControlOrSprite/SpriteCheckbox" to="." method="_on_SpriteCheckbox_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
